// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-homepage no categories should write an empty readme.md file using the home template 1`] = `
"# macos-defaults
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it from scratch. Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/github#readme) if you want to do the same.
"
`;

exports[`write-homepage one category, no page should write a readme.md file using the home template 1`] = `
"# macos-defaults
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## [Category](./category/readme.md)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it from scratch. Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/github#readme) if you want to do the same.
"
`;

exports[`write-homepage one category, one page should write a readme.md file using the home template 1`] = `
"# macos-defaults
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## [Category](./category/readme.md)
- [Page](./category/page/readme.md)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it from scratch. Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/github#readme) if you want to do the same.
"
`;

exports[`write-homepage one category, two pages should write a readme.md file using the home template 1`] = `
"# macos-defaults
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## [Category](./category/readme.md)
- [Page 1](./category/page1/readme.md)
- [Page 2](./category/page2/readme.md)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it from scratch. Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/github#readme) if you want to do the same.
"
`;

exports[`write-homepage two categories, one page in each should write a readme.md file using the home template 1`] = `
"# macos-defaults
Uncomplete list of macOS \`defaults\` commands with demos ✨

## 💻 Commands
## [Category 1](./category1/readme.md)
- [Page](./category1/page/readme.md)

## [Category 2](./category2/readme.md)
- [Page](./category2/page/readme.md)

## 🤔 How do I add a command?
Please update [this file](https://github.com/yannbertrand/macos-defaults/blob/master/defaults.yml) that I use to [build multiple websites](https://github.com/yannbertrand/macos-defaults/#readme) like this one.

## ❤️ I like this website, how can I build the same?
Thank you! I built it from scratch. Take a look at [my report](https://github.com/yannbertrand/macos-defaults/tree/master/build/github#readme) if you want to do the same.
"
`;
